# totalseg-muscle-tool

./: .gitignore  README.md  START WebView.bat  START 啟動.bat
docs/: ARCHITECTURE_OVERVIEW.md  CAPABILITY_INVENTORY.md  CHANGELOG_DEV.md  CLI_DONE_CHECKLIST.md  CLI_REFACTOR_TARGET.md  CSV_LOGIC.md  DOCTOR_QUICK_GUIDE.md  INDEX.md  MODULE_MAP.md  PROJECT_MEMORY.md  REFACTOR_FROM_REQUIREMENTS.md  REFRACTOR_FIXED_PIPELINE_SPEC.md  USER_FUNCTION_SPEC.md  WEBVIEW_UI_STATUS.md  YKC_CHAT_TIMELINE.md
python/: compare_outputs.py  draw.py  export.py  gui_pyside.py  pyproject.toml  seg.py
python/C:\Users\cloud\.openclaw\workspace/: BOOTSTRAP.md  IDENTITY.md  MEMORY.md  USER.md
python/C:\Users\cloud\.openclaw\workspace/memory/: 2026-03-24.md
python/C:\Users\cloud\.openclaw\workspace/projects/: stock-project.md
python/core/: __init__.py  app_version.py  csv_service.py  fixed_pipeline.py  gui_batch_controller.py  gui_case_scan_controller.py  gui_compare_controller.py  gui_license_service.py  gui_log_stream.py  gui_page_builders.py  gui_queue_ui_controller.py  gui_update_controller.py  image_io.py  mask_metrics.py  output_contract.py  pipeline_core.py  pipeline_request.py  shared_core.py  update_service.py
python/pywebview_minimal/: README.md  app.py
python/pywebview_minimal/backend/: api.py
python/pywebview_minimal/frontend/: app.js  index.html  style.css
python/pywebview_tailwind_shell/: README.md  __init__.py  app.py
python/pywebview_tailwind_shell/backend/: __init__.py  api.py
python/pywebview_tailwind_shell/frontend/: app.js  index.html
python/tests/: conftest.py  test_auto_draw_cmd.py  test_gui_license_service.py  test_gui_pyside_smoke.py  test_mode2_guardrails.py  test_pipeline_core.py  test_seg_draw_slice_behavior.py  test_seg_fixed_pipeline.py  test_seg_pipeline_contract.py  test_seg_skip_segmentation.py  test_update_service.py
