[project]
name = "calculate-muscle-areas"
version = "0.1.7"
description = "Muscle Area Calculator using TotalSegmentator"
requires-python = ">=3.10,<3.11"
dependencies = [
    "opencv-python>=4.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "simpleitk>=2.5.2",
    "totalsegmentator>=2.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "pywebview>=6.1",
]

# Windows/Linux GPU 環境：使用 CUDA 12.8
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# 預設使用 GPU 版本（Windows/Linux）
# Mac 使用者請執行：uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
torch = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }
torchaudio = { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".venv",
    ".pytest_cache",
    ".pytest-tmp",
    ".ruff_cache",
    ".uv-cache",
    "pytestsandbox",
    "tmp*",
    "pywebview_tailwind_shell",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    ".pytest_cache",
    ".pytest-tmp",
    ".ruff_cache",
    ".uv-cache",
    "pytestsandbox",
    "tmp*",
    "pywebview_tailwind_shell",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.basedpyright]
include = [
    "draw.py",
    "export.py",
    "seg.py",
    "tests",
    "core",
    "pywebview_tailwind_shell/backend",
]
exclude = [
    ".venv",
    ".pytest_cache",
    ".pytest-tmp",
    ".ruff_cache",
    ".uv-cache",
    "pytestsandbox",
    "tmp*",
    "pywebview_tailwind_shell",
]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
